// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateSelect DateSelect date 1`] = `
<DocumentFragment>
  <div
    class="za-date-select"
  >
    <div
      class="za-date-select__input"
    >
      <div
        class="za-date-select__value"
      >
        2019年4月23日
      </div>
    </div>
    <div
      class="za-date-select__arrow"
    />
  </div>
</DocumentFragment>
`;

exports[`DateSelect DateSelect datetime 1`] = `
<DocumentFragment>
  <div
    class="za-date-select"
  >
    <div
      class="za-date-select__input"
    >
      <div
        class="za-date-select__value"
      >
        2017年11月2日9时0分0秒
      </div>
    </div>
    <div
      class="za-date-select__arrow"
    />
  </div>
</DocumentFragment>
`;

exports[`DateSelect DateSelect disabled 1`] = `
<DocumentFragment>
  <div
    class="za-date-select za-date-select--disabled"
  >
    <div
      class="za-date-select__input"
    >
      <div
        class="za-date-select__value"
      >
        2019年4月23日
      </div>
    </div>
    <div
      class="za-date-select__arrow"
    />
  </div>
</DocumentFragment>
`;

exports[`DateSelect DateSelect time 1`] = `
<DocumentFragment>
  <div
    class="za-date-select"
  >
    <div
      class="za-date-select__input"
    >
      <div
        class="za-date-select__value"
      >
        7时0分0秒
      </div>
    </div>
    <div
      class="za-date-select__arrow"
    />
  </div>
</DocumentFragment>
`;

exports[`DateSelect DateSelect trigger visible 1`] = `
<DocumentFragment>
  <div
    class="za-date-select"
  >
    <div
      class="za-date-select__input"
    >
      <div
        class="za-date-select__value"
      >
        2019年4月23日
      </div>
    </div>
    <div
      class="za-date-select__arrow"
    />
  </div>
</DocumentFragment>
`;

exports[`DateSelect DateSelect year 1`] = `
<DocumentFragment>
  <div
    class="za-date-select"
  >
    <div
      class="za-date-select__input"
    >
      <div
        class="za-date-select__value"
      >
        2019年
      </div>
    </div>
    <div
      class="za-date-select__arrow"
    />
  </div>
</DocumentFragment>
`;
